# Certificate-Management

./: .gitignore  AGENTS.md  README.md  agents.md  index.html  main.bat  pyproject.toml  requirements.txt  style.css
data/: awards.db
docs/: GSAU_majors.xlsx  README.md  agents.md  china_bachelor_majors_2025.csv  china_universities_2025.csv  com.fr.doc  index.xlsx  system_design.md  个人信息模板.doc
src/: app_context.py  config.py  logger.py  main.py  mcp_helpers.py  mcp_runtime.py  mcp_server.py  mcp_web.py  version.py
src/data/: database.py  models.py
src/mcp/: __init__.py  helpers.py  runtime.py  server.py  web.py
src/resources/styles/: styled_dark.qss  styled_light.qss
src/resources/templates/: awards_template.csv  awards_template.xlsx
src/services/: academic_types.py  ai_certificate_service.py  ai_provider_service.py  attachment_manager.py  audit_logger.py  award_service.py  backup_manager.py  doc_extractor.py  flag_service.py  import_export.py  major_importer.py  major_service.py  member_service.py  school_importer.py  school_service.py  settings_service.py  statistics_service.py  validators.py
src/ui/: main_window.py  styled_theme.py  table_models.py  theme.py
src/ui/pages/: about_page.py  base_page.py  dashboard_page.py  entry_page.py  home_page.py  lazy_page.py  management_page.py  overview_page.py  recycle_page.py  settings_page.py  statistics_page.py
src/ui/utils/: async_utils.py
src/ui/widgets/: __init__.py  attachment_table_view.py  major_search.py  school_search.py
tools/: import_majors.py  index.xlsx  test_majors.py
website/: index.html  style.css
